--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Shell Run
+name: Walrus.sh
 
 # Controls when the workflow will run
 on:
@@ -26,5 +26,5 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Run walrus.sh
         run: bash core/walrus.sh
